update stream audio path
